Criado a base do jogo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
 </head>
 <body>
     
+    <div id="containerJogoDaVelha">
+        <div id="btn1" class="botao" onclick="marcaBotao(this.id)">
+            o
+        </div><!-- 
+        --><div id="btn2" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><div id="btn3" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><br><div id="btn4" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><div id="btn5" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><div id="btn6" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><br><div id="btn7" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><div id="btn8" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div><!-- 
+        --><div id="btn9" class="botao" onclick="marcaBotao(this.id)">
+            x
+        </div>
+        
+    </div>
 
     <script src="script.js"></script>
 </body>
